ultimo commit por el dia de hoy, 22 de feb

--- a/primeraPractica.html
+++ b/primeraPractica.html
@@ -8,35 +8,13 @@
         <title>AMONGUS HTML PRACTICE</title>
         <script src="script.js"></script>
 
+        <link rel="stylesheet" href="style.css">
+
         <!--estilo-->
         <!--CSS-->
         <!--Cascading style sheets-->
         <!--Ademas de embeber, se pueden definir clases o estilo por id en otra region-->
         <!--CLASE: se puede definir un tipo de estilo reutilizable-->
-        <style>
-            p {
-                background-color: pink;
-            }
-
-            .estilote {
-                color: red;
-            }
-            
-            .estilito {
-                font-family:'Courier New', Courier, monospace;
-                color:brown;
-                background-color: blueviolet;
-                font-weight: bold;
-            }
-
-            #parrafitobonito {
-                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                font-weight: bold;
-                color: white;
-                background-color: black;
-            }
-        </style>
-
 
     </head>
     <body onload="example()">
