no recuerdo que hice

--- a/primeraPractica.html
+++ b/primeraPractica.html
@@ -1,11 +1,11 @@
-<!--Esto es un comentario de among ass-->
+<!--Esto es un comentario de html-->
 
 <!--HTML usa tags-->
 <!--HTML no contiene nada de logica, describe una unterfaz-->
 
 <html>
     <head>
-        <title>AMONGUS HTML PRACTICE</title>
+        <title>FIRST HTML PRACTICE</title>
         <script src="script.js"></script>
 
         <link rel="stylesheet" href="style.css">
