--- a/Practicas con Memo/primeraPractica.html
+++ b/Practicas con Memo/primeraPractica.html
@@ -122,6 +122,15 @@
         <div style="opacity: 0.7; position: absolute; left:100px; top:100px; width: 500px; height: 500px; background-color: red">
             TEXTO CHIDO.
         </div>
+
+        <!--COMO SE HACE UN LINK-->
+        <!--tipos de ruta:-->
+        <!--* ruta absoluta incluye toda la direccion-->
+        <!--/index.html-->
+        <!--ruta relativa esta basada en mi ubicacion actual-->
+        <!--si empieza con ./ es el folder actual (se puede omitir)-->
+        <!--si empieza con ../ es el folder contenedor-->
+        <a href="primeraPracticaPag2.html">TEXTO PARA PODER HACER LINK</a>
     </body>
 
 </html>
