amm commit de amongass

--- a/Practicas con Memo/primeraPracticaPag2.html
+++ b/Practicas con Memo/primeraPracticaPag2.html
@@ -1,12 +1,17 @@
 <html>
     <head>
         <title>SEGUNDA P&AacuteGINA</title>
+        <script src="script.js"></script>
     </head>
         <body>
             <header>SEGUNDA P&AacuteGINA</header>
 
             <!--PARA CREACION DE FORMULARIOS utilizamos form-->
             <!--methos es una accion que se especifica en el encabezado HTTP-->
-            <form action="a_donde_va.php" method="post"></form>
+            <form action="a_donde_va.php" method="post">
+                <input type="text" id="textito">
+                <br />
+                <button onclick="alertarConDatos()">MOSTRAR DATOS</button>
+            </form>
         </body>
 </html>
