--- a/Mio/website.html
+++ b/Mio/website.html
@@ -18,7 +18,7 @@
 
 	<table id="redes">
 		<tr>
-			<td align="center"><a href="https://anchor.fm/tres-a-distancia" target="_blank"><img src="anchor.png"></a>
+			<td align="center"><a href="https://anchor.fm/tres-a-distancia" target="_blank"><img src="anchor.png"></a></td>
 			<td align="center"><a href="https://open.spotify.com/show/5dxiP87MxLeAZE1Qhp1Jrl" target="_blank"><img src="logotipo-de-spotify.png"></a></td>
 			<td align="center"><a href="https://www.instagram.com/tresadistancia/" target="_blank"><img src="instagram.png"></a></td>
 		</tr>
