--- a/myPaginaRetro/index.html
+++ b/myPaginaRetro/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 }
-<head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"><link> 
     <title>F - S O C I E T Y</title>
+
     <audio autoplay>
-        <source src="macintoshplus.mp3" type="audio/mpeg"></source>
+        <source src="macintoshplus.mp3" type="audio/mpeg">
     </audio>
+    
 </head>
 <body>
+    
     <main>
         <h1 class="Titulo">Bienvenido a F-Society, querido stranger</h1>
         <br />
